--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "googleapis": "^47.0.0",
     "puppeteer": "^2.1.1"
   }
 }
